[package]
name = "guessing_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# add new dependencies to get random numbers, because the 'rand()' function is not available in default rust dependencies
rand = "0.8.5"